--- a/publications.html
+++ b/publications.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications - QLU</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="neural-network.js" defer></script>
     <style>
         .pub-nav {
             position: sticky;
@@ -47,8 +48,11 @@
 <body>
     <header>
         <div class="lab-header">
-            <h1 class="lab-title">Cognitive Computational Neuroscience Lab</h1>
-            <p class="lab-subtitle">Department of Neuroscience, City University of Hong Kong</p>
+            <canvas id="neural-network-canvas"></canvas>
+            <div class="lab-header-content">
+                <h1 class="lab-title">Cognitive Computational Neuroscience Lab</h1>
+                <p class="lab-subtitle">Department of Neuroscience, City University of Hong Kong</p>
+            </div>
         </div>
         <nav class="nav-bar">
             <div class="nav-container">
