--- a/teaching.html
+++ b/teaching.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teaching - QLU</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="neural-network.js" defer></script>
 </head>
 <body>
     <header>
         <div class="lab-header">
-            <h1 class="lab-title">Cognitive Computational Neuroscience Lab</h1>
-            <p class="lab-subtitle">Department of Neuroscience, City University of Hong Kong</p>
+            <canvas id="neural-network-canvas"></canvas>
+            <div class="lab-header-content">
+                <h1 class="lab-title">Cognitive Computational Neuroscience Lab</h1>
+                <p class="lab-subtitle">Department of Neuroscience, City University of Hong Kong</p>
+            </div>
         </div>
         <nav class="nav-bar">
             <div class="nav-container">
