--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - QLU</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="neural-network.js" defer></script>
 </head>
 <body>
     <header>
         <div class="lab-header">
-            <h1 class="lab-title">Cognitive Computational Neuroscience Lab</h1>
-            <p class="lab-subtitle">Department of Neuroscience, City University of Hong Kong</p>
+            <canvas id="neural-network-canvas"></canvas>
+            <div class="lab-header-content">
+                <h1 class="lab-title">Cognitive Computational Neuroscience Lab</h1>
+                <p class="lab-subtitle">Department of Neuroscience, City University of Hong Kong</p>
+            </div>
         </div>
         <nav class="nav-bar">
             <div class="nav-container">
@@ -50,7 +54,7 @@
                 <b>Neurons are relatively simple computation units. However, the brain, a collection of neurons, possesses highly intricate memory functions</b>. 
                 For example, episodic memory allows humans to rapidly encode information upon a single exposure and retrieve it later to support adaptive behavior – 
                 to do so, the brain constantly needs to decide when to encode a new memory or when to retrieve an old one. 
-                What’s the strategy the brain uses to coordinate episodic memory in conjunction with other memory systems? 
+                What's the strategy the brain uses to coordinate episodic memory in conjunction with other memory systems? 
                 Does the optimal strategy explain how human use memory in the real world? 
                 Finally, how can we implement a system with neuron-like processing units to achieve human-like memory functions? 
 
@@ -99,8 +103,8 @@
                 </div>
             </section> -->
 
-
-            <!-- <section class="section">
+<!-- 
+            <section class="section">
                 <h2>Contact</h2>
                 <div class="contact-grid">
                     <div class="contact-info">
