--- a/join.html
+++ b/join.html
@@ -110,7 +110,7 @@
                 <h3>Lab culture / Lab manual</h3>
                 <div class="research-area">
                     I'm comitted to create an environment that is friendly and supportive for everyone. 
-                    To facilitate this, I'm working on a <a href="https://docs.google.com/document/d/1BbRz7WbxxJ4s1wa3xaVEsZNLDXj2Ve4_eMYq8I7zBIQ/edit?usp=sharing">lab manual</a>. 
+                    To facilitate this, I have been working on a <a href="https://docs.google.com/document/d/1BbRz7WbxxJ4s1wa3xaVEsZNLDXj2Ve4_eMYq8I7zBIQ/edit?usp=sharing">lab manual</a>. 
                     I encouarge all potential candidates to take a look. 
                     Note that this is a working document and will always be a working document: if you have any suggestions about things to add/change, please let me know!
                 </div>
