--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2024 Laboratory Name. All rights reserved.</p>
+            <p>© 2024 Qihong Lu. All rights reserved.</p>
         </div>
     </footer>
 </body>
