--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 to do so, the brain constantly needs to decide when to encode a new memory or when to retrieve an old one. 
                 What's the strategy the brain uses to coordinate episodic memory in conjunction with other memory systems? 
                 Does the optimal strategy explain how human use memory in the real world? 
-                Finally, how can we implement a system with neuron-like processing units to achieve human-like memory functions? 
+                How can we implement a system with neuron-like processing units to achieve human-like memory functions? 
 
                 <br><br>
                 To investigate computational principles of learning and memory, I use <b>artificial neural networks as model organisms</b>. 
