update sim / links

--- a/people.html
+++ b/people.html
@@ -40,9 +40,13 @@
                         <div class="member-name">Qihong Lu (吕其鸿)</div>
                         <div class="member-role">Principal Investigator</div>
                         <div class="member-links">
-                            <!-- <a href="https://qihongl.github.io/">Personal Page</a> -->
                             <a href="docs/CV_QL-0422.pdf">CV</a>
                             <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">Google Scholar</a>
+                            <a href="https://twitter.com/Qihong_Lu">X</a>
+                            <a href="https://bsky.app/profile/qlu.bsky.social">Bluesky</a>
+                            <a href="https://www.researchgate.net/profile/Qihong-Lu-2">ResearchGate</a>
+                            <a href="https://github.com/QihongL">GitHub</a>
+                            <a href="https://orcid.org/0000-0002-0730-5240">ORCID</a>
                         </div>
                     </div>
                 <!-- </div>
@@ -96,7 +100,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2024 Qihong Lu. All rights reserved.</p>
+            <p>© 2025 Qihong Lu. All rights reserved.</p>
         </div>
     </footer>
 </body>
