--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Memory Theory Lab</title>
+    <title>Gallery - QLU</title>
     <link rel="stylesheet" href="styles.css">
     <script src="neural-network.js" defer></script>
 </head>
@@ -69,7 +69,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2024 Qihong Lu. All rights reserved.</p>
+            <p>© 2025 Qihong Lu. All rights reserved.</p>
         </div>
     </footer>
 </body>
