--- a/teaching.html
+++ b/teaching.html
@@ -62,9 +62,9 @@
                 <div class="research-area">
 
                     <ul>
-                        <li><a href="https://brainiak.org/">BrainIAK</a></li>
-                        <li><a href="https://brainiak.org/tutorials/">BrainIAK Tutorials</a></li>
+                        <li><a href="https://brainiak.org/">BrainIAK</a>, <a href="https://brainiak.org/tutorials/">BrainIAK Tutorials</a></li>
                         <li><a href="https://princetonuniversity.github.io/PsyNeuLink/">PsyNeuLink</a></li>
+                        <li><a href="https://portal.neuromatchacademy.org/">Neuromatch Academy</a></li>
                     </ul>
                 </div>
             </section>
@@ -73,7 +73,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2024 Qihong Lu. All rights reserved.</p>
+            <p>© 2025 Qihong Lu. All rights reserved.</p>
         </div>
     </footer>
 </body>
