--- a/join.html
+++ b/join.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Us - QLU</title>
+    <link rel="icon" type="image/png" href="imgs/icons/model.png">
     <link rel="stylesheet" href="styles.css">
     <script src="neural-network.js" defer></script>
 </head>
@@ -52,8 +53,8 @@
                         <li>Ideal qualifications:
                             <ul>
                                 <li>Bachelor's degree in Computer Science, Neuroscience, Psychology, or related fields</li>
-                                <li>Interest in computational modeling and human memory research</li>
                                 <li>Experience with human neuroimaging/behavioral experiments or machine learning is a plus</li>
+                                <li>Interest in human memory research</li>
                                 <li>Programming skills (Python preferred)</li>
                             </ul>
                         </li>
@@ -66,8 +67,8 @@
                         <li>Ideal qualifications:
                             <ul>
                                 <li>Bachelor's or Master's degree in Computer Science, Neuroscience, Psychology, or related fields</li>
-                                <li>Interest in computational modeling and human memory research</li>
                                 <li>Research experience in human neuroimaging / behavioral experiments or machine learning / computational modeling</li> 
+                                <li>Interest in human memory research</li>
                                 <li>Strong programming skills (Python preferred)</li>
                             </ul>
                         </li>
@@ -86,8 +87,10 @@
                         <li>Ideal qualifications:
                             <ul>
                                 <li>Ph.D. in Computer Science, Neuroscience, Psychology, or related fields</li>
-                                <li>Relevant publication record</li>
                                 <li>Expertise in human neuroimaging/behavioral experiments or machine learning / computational modeling</li>
+                                <li>Interest in human memory research</li>
+                                <li>Relevant publication record</li>
+                                
                             </ul>
                         </li>
                     </ul>
