--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - QLU</title>
+    <link rel="icon" type="image/png" href="imgs/icons/model.png">
     <link rel="stylesheet" href="styles.css">
     <script src="neural-network.js" defer></script>
 </head>
@@ -69,28 +70,30 @@
                 iii) informed principles of learning and education. 
                 Please consider joining my lab to work together! 
                 </p>
-            </div>
-        </section>
 
-
-        <div class="container">
-            <!-- <section class="section">
-                <h2>Research Areas</h2>
                 <div class="research-grid">
                     <div class="research-area">
-                        <h3>Memory systems interaction</h3>
-                        <p>How do episodic memory, working memory and semantic memory work in synergy to support adaptive behavior?</p>
+                        <center>
+                            <h3>Neural network modeling</h3>
+                            <img src="imgs/icons/model.png" alt="Computational modeling" style="width: 50%;">
+                        </center>
                     </div>
                     <div class="research-area">
-                        <h3>Computational principles of human memory</h3>
-                        <p>To what extent do properties of human memory reflect the statistical structure of the natural environment?</p>
+                        <center>
+                            <h3>Human behavior</h3>
+                            <img src="imgs/icons/behavior.png" alt="Human behavior" style="width: 50%;">
+                        </center>
                     </div>
                     <div class="research-area">
-                        <h3>NeuroAI</h3>
-                        <p>How can we transfer properties of human memory to build more efficient and robust AI systems?</p>
+                        <center>
+                            <h3>Human neuroimging</h3>
+                            <img src="imgs/icons/fmri.png" alt="Human neuroimging" style="width: 50%;">
+                        </center>
                     </div>
                 </div>
-            </section> -->
+
+            </div>
+        </section>
 
 
             <!-- <section class="section">
@@ -103,24 +106,26 @@
                 </div>
             </section> -->
 
-<!-- 
+
             <section class="section">
-                <h2>Contact</h2>
-                <div class="contact-grid">
-                    <div class="contact-info">
-                        <h3>Lab Location</h3>
-                        <p>
-                        Department of Neuroscience<br>
-                        College of Biomedicine<br>
-                        City University of Hong Kong<br>
-                        </p>
-                    </div>
-                    <div class="contact-info">
-                        <h3>Contact</h3>
-                        <p>Email: qlu.neuro@gmail.com<br>
+                <div class="container">
+                    <h2>Contact</h2>
+                    <div class="contact-grid">
+                        <div class="contact-info">
+                            <h3>Lab Location</h3>
+                            <p>
+                            <a href="https://www.cityu.edu.hk/neuro/">Department of Neuroscience</a><br>
+                            <a href="https://www.cityu.edu.hk/cbm/">College of Biomedicine</a><br>
+                            <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a><br>
+                            </p>
+                        </div>
+                        <div class="contact-info">
+                            <h3>Email</h3>
+                            qlu.neuro@gmail.com
+                        </div>
                     </div>
                 </div>
-            </section> -->
+            </section>
 
         </div>
 
