--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 Qihong Lu. All rights reserved.</p>
+            <p>© 2025 Qihong Lu. All rights reserved. <br>The icons are designed by Freepik.</p>
         </div>
     </footer>
 </body>
