--- a/join.html
+++ b/join.html
@@ -34,9 +34,9 @@
             <section class="section">
 
                 
-                <h2>Join Our Lab</h2>
+                <!-- <h2>Join Our Lab</h2> -->
                 
-                <h3>Open Positions</h3>
+                <h2>Open Positions</h2>
                     Thanks for visiting my lab page! 欢迎访问我的实验室网页！
                 <br>
                     I have <strong>RA, PhD, and postdoc positions available!</strong>
