--- a/teaching.html
+++ b/teaching.html
@@ -61,12 +61,19 @@
 
                 <h3>Teaching Resources</h3>
                 <div class="research-area">
-
+                    <h4>Neuroimaging</h4>
                     <ul>
                         <li><a href="https://brainiak.org/">BrainIAK</a>, <a href="https://brainiak.org/tutorials/">BrainIAK Tutorials</a></li>
+                        <li><a href="https://brainhack-princeton.github.io/handbook/">The Princeton Handbook for Reproducible Neuroimaging</a></li>
+                        <li><a href="https://fmriprep.org/en/stable/">fMRIprep</a></li>
+                    </ul>
+                    <h4>Computational modeling</h4>
+                    <ul>
+                        <li><a href="https://playground.tensorflow.org/#activation=sigmoid&batchSize=1&dataset=xor&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=15&networkShape=1,2&seed=0.43437&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=true&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false">Neural network playground</a></li>
                         <li><a href="https://princetonuniversity.github.io/PsyNeuLink/">PsyNeuLink</a></li>
                         <li><a href="https://portal.neuromatchacademy.org/">Neuromatch Academy</a></li>
                     </ul>
+
                 </div>
             </section>
         </div>
