--- a/index.html
+++ b/index.html
@@ -121,7 +121,12 @@
                         </div>
                         <div class="contact-info">
                             <h3>Email</h3>
-                            qlu.neuro@gmail.com
+                            <a href="mailto:qlu.neuro@gmail.com">qlu.neuro@gmail.com</a>
+                        </div>
+
+                        <div class="contact-info">
+                            <h3>Info</h3>
+                            <a href="https://docs.google.com/document/d/1BbRz7WbxxJ4s1wa3xaVEsZNLDXj2Ve4_eMYq8I7zBIQ/edit?usp=sharing">Lab manual</a>
                         </div>
                     </div>
                 </div>
