--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                         <div class="contact-info">
                             <h3>Info</h3>
-                            <a href="https://docs.google.com/document/d/1BbRz7WbxxJ4s1wa3xaVEsZNLDXj2Ve4_eMYq8I7zBIQ/edit?usp=sharing">Lab manual</a>
+                            <a href="https://docs.google.com/document/d/1BbRz7WbxxJ4s1wa3xaVEsZNLDXj2Ve4_eMYq8I7zBIQ/edit?usp=sharing">Lab manual</a> (in progress)
                         </div>
                     </div>
                 </div>
