--- a/people.html
+++ b/people.html
@@ -21,7 +21,7 @@
             <div class="nav-container">
                 <a href="index.html" class="nav-button">Home</a>
                 <a href="people.html" class="nav-button active">People</a>
-                <a href="publications.html" class="nav-button">Publications</a>                
+                <a href="publications.html" class="nav-button">Publications</a>
                 <a href="teaching.html" class="nav-button">Teaching</a>
                 <a href="join.html" class="nav-button">Join Us</a>
                 <a href="gallery.html" class="nav-button">Gallery</a>
@@ -33,7 +33,7 @@
         <div class="container">
             <section class="section">
                 <h2>People</h2>
-                
+
                 <!-- <h3>Principal Investigator</h3> -->
                 <div class="team-grid">
                     <div class="team-member">
@@ -86,6 +86,22 @@
 
                 </div>
 
+                <h2>Collaborators</h2>
+                <div class="research-area">
+
+                    <ul>
+                        <li>Daphna Shohamy, Columbia University</li>
+                        <li>Stefano Fusi, Columbia University</li>
+                        <li>Kenneth Norman, Princeton University</li>
+                        <li>Jonathan Cohen, Princeton University</li>
+                        <li>Timothy Buschman, Princeton University</li>
+                        <li>Marcelo Mattar, New York University</li>
+                        <li>Kristopher Jensen, University College London</li>
+                    </ul>
+
+                </div>
+
+
                 <!-- <h3>Alumni</h3>
                 <div class="team-grid">
                     <div class="team-member">
@@ -95,6 +111,7 @@
                         <p>Current Position: Research Scientist at Company</p>
                     </div>
                 </div> -->
+
             </section>
         </div>
     </main>
