--- a/people.html
+++ b/people.html
@@ -97,6 +97,9 @@
                         <li>Timothy Buschman, Princeton University</li>
                         <li>Marcelo Mattar, New York University</li>
                         <li>Kristopher Jensen, University College London</li>
+                        <li>Jeffrey Zacks, Washington University in St. Louis</li>
+                        <li>Hayoung Song, Washington University in St. Louis</li>
+
                     </ul>
 
                 </div>
