--- a/index.html
+++ b/index.html
@@ -52,51 +52,76 @@
             <div class="container">
                 <h2>Research</h2>
                 <p>                
-                <b>Neurons are relatively simple computation units. However, the brain, a collection of neurons, possesses highly intricate memory functions</b>. 
-                For example, episodic memory allows humans to rapidly encode information upon a single exposure and retrieve it later to support adaptive behavior – 
-                to do so, the brain constantly needs to decide when to encode a new memory or when to retrieve an old one. 
-                What's the strategy the brain uses to coordinate episodic memory in conjunction with other memory systems? 
-                Does the optimal strategy explain how human use memory in the real world? 
-                How can we implement a system with neuron-like processing units to achieve human-like memory functions? 
+                <b>Episodic memory (EM)</b> enables us to rapidly encode information upon a single exposure and retrieve it later, which is critical for adaptive behavior. 
+                Yet many fundamental questions remain unclear. How does the brain use EM to support cognition? How does the brain coordinate EM with other memory systems? What’s the optimal coordination strategy, and to what extent does the optimal strategy explain human behavior? 
+                <br><br>
+                To investigate computational principles of episodic memory, 
+                I use <b>artificial neural networks as model organisms</b>. 
+                Then, I test model predictions with <b>human behavioral and neuroimaging experiments</b>. 
+                By reverse-engineering human memory in a neural network model [1, 2], 
+                we can gain insight into the cognitive architecture the brain employs and the statistical structure of the environment we live in.
 
-                <br><br>
-                To investigate computational principles of learning and memory, I use <b>artificial neural networks as model organisms</b>. 
-                Then, I test model predictions with <b>behavioral and neuroimaging experiments</b>. 
-                By recapitulating human behavior in a neural network model, we can gain insights into the cognitive architecture the brain uses and the statistical structure of the environment we live in. 
-                <br><br>
-                Understanding the computational/neural/cognitive mechanisms of human memory would make timely contributions to 
-                i) effective algorithms for NeuroAI, 
-                ii) better solutions to memory-related issues (e.g., brain fog, aging, Alzheimer's disease)
-                iii) informed principles of learning and education. 
-                Please consider joining my lab to work together! 
                 </p>
+            </div>
+        </section>
 
+        <section class="section">
+            <div class="container">
+                <h2>Methods</h2>
                 <div class="research-grid">
                     <div class="research-area">
                         <center>
-                            <h3>Neural network modeling</h3>
+                            <h3>Neural networks as <br> model organisms</h3>
                             <img src="imgs/icons/model.png" alt="Computational modeling" style="width: 50%;">
                         </center>
                     </div>
                     <div class="research-area">
                         <center>
-                            <h3>Human behavior</h3>
+                            <h3>Human behavioral experiments</h3>
                             <img src="imgs/icons/behavior.png" alt="Human behavior" style="width: 50%;">
                         </center>
                     </div>
                     <div class="research-area">
                         <center>
-                            <h3>Human neuroimging</h3>
+                            <h3>Advaced neuroimaging <br> data analysis</h3>
                             <img src="imgs/icons/fmri.png" alt="Human neuroimging" style="width: 50%;">
                         </center>
                     </div>
                 </div>
-
             </div>
         </section>
 
 
-            <!-- <section class="section">
+
+        <section class="section">
+            <div class="container">
+                <h2>Potential impacts</h2>
+                <div class="research-grid">
+                    <div class="research-area">
+                        <center>
+                            <h3>Artificial intelligence</h3>
+                            <img src="imgs/icons/ai.png" alt="NeuroAI" style="width: 50%;">
+                        </center>
+                    </div>
+                    <div class="research-area">
+                        <center>
+                            <h3>Memory disorders</h3>
+                            <img src="imgs/icons/memory-disorder.png" alt="Memory issues" style="width: 50%;">
+                        </center>
+                    </div>
+                    <div class="research-area">
+                        <center>
+                            <h3>Learning and education</h3>
+                            <img src="imgs/icons/education.png" alt="Learning and education" style="width: 50%;">
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </section>        
+
+
+        <!-- <section class="section">
+            <div class="container">
                 <h2>Latest News</h2>
                 <div class="news-section">
                     <div class="news-item">
@@ -104,33 +129,34 @@
                         <p>This lab will get launched in Jan 2026!</p>
                     </div>
                 </div>
-            </section> -->
+            </div>
+        </section> -->
 
 
-            <section class="section">
-                <div class="container">
-                    <h2>Contact</h2>
-                    <div class="contact-grid">
-                        <div class="contact-info">
-                            <h3>Lab Location</h3>
-                            <p>
-                            <a href="https://www.cityu.edu.hk/neuro/">Department of Neuroscience</a><br>
-                            <a href="https://www.cityu.edu.hk/cbm/">College of Biomedicine</a><br>
-                            <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a><br>
-                            </p>
-                        </div>
-                        <div class="contact-info">
-                            <h3>Email</h3>
-                            <a href="mailto:qlu.neuro@gmail.com">qlu.neuro@gmail.com</a>
-                        </div>
+        <section class="section">
+            <div class="container">
+                <h2>Contact</h2>
+                <div class="contact-grid">
+                    <div class="contact-info">
+                        <h3>Lab Location</h3>
+                        <p>
+                        <a href="https://www.cityu.edu.hk/neuro/">Department of Neuroscience</a><br>
+                        <a href="https://www.cityu.edu.hk/cbm/">College of Biomedicine</a><br>
+                        <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a><br>
+                        </p>
+                    </div>
+                    <div class="contact-info">
+                        <h3>Email</h3>
+                        <a href="mailto:qlu.neuro@gmail.com">qlu.neuro@gmail.com</a>
+                    </div>
 
-                        <div class="contact-info">
-                            <h3>Info</h3>
-                            <a href="https://docs.google.com/document/d/1BbRz7WbxxJ4s1wa3xaVEsZNLDXj2Ve4_eMYq8I7zBIQ/edit?usp=sharing">Lab manual</a> (in progress)
-                        </div>
+                    <div class="contact-info">
+                        <h3>Info</h3>
+                        <a href="https://docs.google.com/document/d/1BbRz7WbxxJ4s1wa3xaVEsZNLDXj2Ve4_eMYq8I7zBIQ/edit?usp=sharing">Lab manual</a> (in progress)
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
         </div>
 
