--- a/join.html
+++ b/join.html
@@ -53,9 +53,10 @@
                         <li>Ideal qualifications:
                             <ul>
                                 <li>Bachelor's degree in Computer Science, Neuroscience, Psychology, or related fields</li>
+                                <li>Interest in getting a PhD with me</li>
+                                <li>Interest/experience in human memory research</li>
                                 <li>Experience with human neuroimaging/behavioral experiments or machine learning is a plus</li>
-                                <li>Interest in human memory research</li>
-                                <li>Programming skills (Python preferred)</li>
+                                <li>Strong programming skills (Python preferred)</li>
                             </ul>
                         </li>
                     </ul>
@@ -67,8 +68,8 @@
                         <li>Ideal qualifications:
                             <ul>
                                 <li>Bachelor's or Master's degree in Computer Science, Neuroscience, Psychology, or related fields</li>
+                                <li>Interest/experience in human memory research</li>
                                 <li>Research experience in human neuroimaging / behavioral experiments or machine learning / computational modeling</li> 
-                                <li>Interest in human memory research</li>
                                 <li>Strong programming skills (Python preferred)</li>
                             </ul>
                         </li>
@@ -77,7 +78,6 @@
                         The <a href="https://www.cityu.edu.hk/pg/research-degree-programmes">CityU PhD program info page</a> has a lot of information, 
                         including application deadlines, additional funding/scholarship opportunities. 
                         <strong>Please read the info pages carefully </strong> and make sure you are fully aware of the "Entrance Requirements" of the program. 
-                        The start date is flexible, if the regular September start date is too early/late!
                     </ul>
                 </div>
 
@@ -87,8 +87,7 @@
                         <li>Ideal qualifications:
                             <ul>
                                 <li>Ph.D. in Computer Science, Neuroscience, Psychology, or related fields</li>
-                                <li>Expertise in human neuroimaging/behavioral experiments or machine learning / computational modeling</li>
-                                <li>Interest in human memory research</li>
+                                <li>Potential synergy with the lab's research directions</li>
                                 <li>Relevant publication record</li>
                                 
                             </ul>
@@ -98,14 +97,16 @@
 
                 <h3>How to Apply</h3>
                 <div class="research-area">
-                    To apply, please send the following materials to qlu.neuro@gmail.com:
+                    To apply, please send the following information (if applicable) to qlu.neuro@gmail.com:
                     <ul>
+                        <li>A brief description of what would you like to work on with me!</li>
                         <li>CV/Resume</li>
                         <ul>
                             <li>please indicate your GPA (e.g. 3.5/4.0, 85/100, etc.) -- this is related with the CityUHK's entrance requirement</li>
                             <li>please highlight any relevant research experience you have</li>
                         </ul>
-                        <li>A brief description of what would you like to work on with me!</li>
+                        <li>Please indicate your ideal start date and whether there is any flexibility with the start date</li>
+                        <li>Your github repo or other code samples</li>
                     </ul>
 
                 </div>
