--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="lab-header">
             <canvas id="neural-network-canvas"></canvas>
             <div class="lab-header-content">
-                <h1 class="lab-title">Cognitive Computational Neuroscience Lab</h1>
-                <p class="lab-subtitle">Department of Neuroscience, City University of Hong Kong</p>
+                <h1 class="lab-title">Computational Memory Lab</h1>
+                <p class="lab-subtitle">at the Department of Neuroscience, City University of Hong Kong</p>
             </div>
         </div>
         <nav class="nav-bar">
@@ -53,7 +53,7 @@
                 <h2>Research</h2>
                 <p>                
                 <b>Episodic memory (EM)</b> enables us to rapidly encode information upon a single exposure and retrieve it later, which is critical for adaptive behavior. 
-                Yet many fundamental questions remain unclear. How does the brain use EM to support cognition? How does the brain coordinate EM with other memory systems? What’s the optimal coordination strategy, and to what extent does the optimal strategy explain human behavior? 
+                Yet many fundamental questions remain unclear. How does the brain use EM to support cognition? How does the brain coordinate EM with other memory systems? What's the optimal coordination strategy, and to what extent does the optimal strategy explain human behavior? 
                 <br><br>
                 To investigate computational principles of episodic memory, 
                 I use <b>artificial neural networks as model organisms</b>. 
