--- a/join.html
+++ b/join.html
@@ -13,8 +13,8 @@
         <div class="lab-header">
             <canvas id="neural-network-canvas"></canvas>
             <div class="lab-header-content">
-                <h1 class="lab-title">Cognitive Computational Neuroscience Lab</h1>
-                <p class="lab-subtitle">Department of Neuroscience, City University of Hong Kong</p>
+                <h1 class="lab-title">Computational Memory Lab</h1>
+                <p class="lab-subtitle">at the Department of Neuroscience, City University of Hong Kong</p>
             </div>
         </div>
         <nav class="nav-bar">
@@ -53,10 +53,10 @@
                         <li>Ideal qualifications:
                             <ul>
                                 <li>Bachelor's degree in Computer Science, Neuroscience, Psychology, or related fields</li>
-                                <li>Interest in getting a PhD with me</li>
+                                <!-- <li>Interest in getting a PhD with me</li> -->
                                 <li>Interest/experience in human memory research</li>
-                                <li>Experience with human neuroimaging/behavioral experiments or machine learning is a plus</li>
                                 <li>Strong programming skills (Python preferred)</li>
+                                <li>Experience with human neuroimaging/behavioral experiments or machine learning is a plus</li>
                             </ul>
                         </li>
                     </ul>
@@ -69,8 +69,8 @@
                             <ul>
                                 <li>Bachelor's or Master's degree in Computer Science, Neuroscience, Psychology, or related fields</li>
                                 <li>Interest/experience in human memory research</li>
-                                <li>Research experience in human neuroimaging / behavioral experiments or machine learning / computational modeling</li> 
                                 <li>Strong programming skills (Python preferred)</li>
+                                <li>Research experience in human neuroimaging / behavioral experiments or machine learning / computational modeling</li> 
                             </ul>
                         </li>
                         <br>
@@ -78,6 +78,8 @@
                         The <a href="https://www.cityu.edu.hk/pg/research-degree-programmes">CityU PhD program info page</a> has a lot of information, 
                         including application deadlines, additional funding/scholarship opportunities. 
                         <strong>Please read the info pages carefully </strong> and make sure you are fully aware of the "Entrance Requirements" of the program. 
+                        <br><br>
+                        CityUHK has joint PhD programs with many universities in mainland and across the globe. Let me know if you are interested!
                     </ul>
                 </div>
 
@@ -89,7 +91,6 @@
                                 <li>Ph.D. in Computer Science, Neuroscience, Psychology, or related fields</li>
                                 <li>Potential synergy with the lab's research directions</li>
                                 <li>Relevant publication record</li>
-                                
                             </ul>
                         </li>
                     </ul>
