--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                 <b>Episodic memory (EM)</b> enables us to rapidly encode information upon a single exposure and retrieve it later, which is critical for adaptive behavior. 
                 Yet many fundamental questions remain unclear. How does the brain use EM to support cognition? How does the brain coordinate EM with other memory systems? What's the optimal coordination strategy, and to what extent does the optimal strategy explain human behavior? 
                 <br><br>
-                To investigate computational principles of episodic memory, 
-                I use <b>artificial neural networks as model organisms</b>. 
-                Then, I test model predictions with <b>human behavioral and neuroimaging experiments</b>. 
-                By reverse-engineering human memory in a neural network model [1, 2], 
+                To investigate computational principles of learning and memory, 
+                we use <b>artificial neural networks as model organisms</b>. 
+                And we test model predictions with <b>human behavioral and neuroimaging experiments</b>. 
+                By reverse-engineering human memory in a neural network model, 
                 we can gain insight into the cognitive architecture the brain employs and the statistical structure of the environment we live in.
 
                 </p>
