--- a/join.html
+++ b/join.html
@@ -141,6 +141,7 @@
                         The <a href="https://www.cityu.edu.hk/pg/research-degree-programmes">CityU PhD program info page</a> has a lot of information, 
                         including application deadlines, additional funding/scholarship opportunities. 
                         <strong>Please read the info pages carefully </strong> and make sure you are fully aware of the "Entrance Requirements" of the program. 
+                        Exceptional students will be supported to apply for <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship Scheme</a>.
                         <br><br>
                         CityUHK has joint PhD programs with many universities in mainland and across the globe. Let me know if you are interested!
                         <br><br>
@@ -210,6 +211,13 @@
                             <li>CV/Resume</li>
                             <li>Please indicate your ideal start date and whether there is any flexibility with the start date</li>
                             <li>Contact info for 1-3 references</li>
+                        </ul>
+
+                        <li>Funding schemes:
+                        <ul>
+                            <li>By my research grants</li>
+                            <li><a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/pdfs/index.html">RGC Postdoctoral Fellowship Scheme</a></li>
+                            <li><a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/jrfs/">RGC Junior Research Fellow Scheme </a></li>                            
                         </ul>
                     </ul>
                 </div>
