--- a/join.html
+++ b/join.html
@@ -141,7 +141,7 @@
                         The <a href="https://www.cityu.edu.hk/pg/research-degree-programmes">CityU PhD program info page</a> has a lot of information, 
                         including application deadlines, additional funding/scholarship opportunities. 
                         <strong>Please read the info pages carefully </strong> and make sure you are fully aware of the "Entrance Requirements" of the program. 
-                        Exceptional students will be supported to apply for <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship Scheme</a>.
+                        
                         <br><br>
                         CityUHK has joint PhD programs with many universities in mainland and across the globe. Let me know if you are interested!
                         <br><br>
@@ -166,12 +166,19 @@
                             <li>Your github repo or other code samples</li>
                             <li>Contact info for 1-2 references</li>
                         </ul>
+
+                        <li> Funding schemes and scholarships opportunities:
+                            <ul>
+                                <li>Exceptional students will be supported to apply for the <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship Scheme</a>.</li>
+                                <li><a href="https://www.edb.gov.hk/en/edu-system/postsecondary/local-higher-edu/publicly-funded-programmes/scholarship.html">Belt and Road Scholarship</a></li>
+                                <li>CityUHK has a generous scholarship program for PhD students. Please see the <a href="https://www.cityu.edu.hk/pg/research-degree-programmes/scholarships-financial-aid-and-fees">CityUHK scholarships page</a> for more info.</li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
 
                 <div class="collapsible" onclick="toggleSection(this)">
-                    <h4>Visiting Ph.D. Students</h4>
+                    <h4>Visiting Ph.D. Student</h4>
                 </div>
                 <div class="collapsible-content">
                     Students who are currently enrolled in a PhD program are encouraged to apply to visit the lab! 
@@ -215,7 +222,7 @@
 
                         <li>Funding schemes:
                         <ul>
-                            <li>By my research grants</li>
+                            <li>My research grants</li>
                             <li><a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/pdfs/index.html">RGC Postdoctoral Fellowship Scheme</a></li>
                             <li><a href="https://www.ugc.edu.hk/eng/rgc/funding_opport/jrfs/">RGC Junior Research Fellow Scheme </a></li>                            
                         </ul>
