--- a/publications.html
+++ b/publications.html
@@ -89,11 +89,23 @@
                     For latest papers, please refer to our <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">Google Scholar page</a>.
                     <br><br>
                     <div class="timeline-container">
+
+                    <div class="publication">
+                        <div class="timeline-marker">2025</div>
+                        <div class="publication-title">Towards Large Language Models with Human-Like Episodic Memory.</div>
+                        <div class="publication-authors">Dong, V. C., <strong>Lu, Q.</strong>, Norman, K. A. \& Michelmann, S. </div>
+                        <div class="publication-venue">Trends in Cognitive Sciences, 2025.</div>
+                        <div class="publication-links">
+                            <a href="https://doi.org/10.1016/j.tics.2025.06.016">[PDF]</a>
+                            <!-- <a href="#">[Code]</a> -->
+                        </div>
+                    </div>                        
+
                     <div class="publication">
                         <div class="timeline-marker">2024</div>
                         <div class="publication-title">Episodic memory supports the acquisition of structured task representations.</div>
                         <div class="publication-authors"><strong>Lu, Q.</strong>, Hummos, A., & Norman, K. A.</div>
-                        <div class="publication-venue">Proceedings of the Annual Meeting of the Cognitive Science Society 46 (46), 2024.</div>
+                        <div class="publication-venue">Proceedings of the Annual Meeting of the Cognitive Science Society, 2024.</div>
                         <div class="publication-links">
                             <a href="https://www.biorxiv.org/content/10.1101/2024.05.06.592749v3">[PDF]</a>
                             <!-- <a href="#">[Code]</a> -->
